[project]
name = "netpulse-backend"
version = "0.1.0"
description = "NetPulse — Predictive internet path intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NetPulse" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Redis
    "redis[hiredis]>=5.0.0",

    # Config
    "pydantic-settings>=2.5.0",

    # HTTP client
    "httpx>=0.27.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Logging
    "structlog>=24.4.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "orjson>=3.10.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3.0",
    "torch-geometric>=2.5.0",
    "torch-geometric-temporal>=0.54.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]
ingestion = [
    "bgpkit-parser>=0.6.0",
    "aiofiles>=24.1.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI's Depends() requires function calls in defaults

[tool.ruff.lint.per-file-ignores]
"app/db/migrations/*" = ["UP007", "UP035"]  # Alembic template uses Union/Sequence

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
